src/test/ui/tuple/tuple-struct-fields/test2.stderr
error: expected one of `)` or `,`, found `(`
  --> $DIR/test2.rs:5:26
   |
LL |         struct S3(pub $t ());
   |                          ^ expected one of `)` or `,` here
...
LL |     define_struct! { (foo) }
   |     ------------------------ in this macro invocation

error: aborting due to previous error

